--- a/.github/workflows/nugets_deploy.yml
+++ b/.github/workflows/nugets_deploy.yml
@@ -25,7 +25,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Configure Github Nuget repository
-        run: dotnet nuget add source --username ismailbennani --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Dofus-Batteries-Included/index.json"
+        run: dotnet nuget add source --username ismailbennani --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/ismailbennani/index.json"
 
       - name: Build
         run: dotnet build --configuration Release
