--- a/.github/workflows/nugets_deploy.yml
+++ b/.github/workflows/nugets_deploy.yml
@@ -33,11 +33,18 @@ jobs:
       - name: Pack
         run: dotnet pack --configuration Release --no-build --output nuget/
 
-      - name: Publish nugets
+      - name: Publish nugets - Github
         if: ${{ github.event_name == 'release' }}
         run: |
           foreach($File in (Get-ChildItem "nuget/" -Recurse -Include *.nupkg)) {
               dotnet nuget push $File --source github --api-key ${{ secrets.GITHUB_TOKEN }}
+          }
+
+      - name: Publish nugets - Nuget
+        if: ${{ github.event_name == 'release' }}
+        run: |
+          foreach($File in (Get-ChildItem "nuget/" -Recurse -Include *.nupkg)) {
+              dotnet nuget push $File --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_TOKEN }}
           }
 
       - name: Upload nugets to artifacts
